--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     <input type="checkbox" id=""><br>
   </form>
   <br><br>
-  <a href="notesHTML.html">go back</a>
+  <a href="index.html">go back</a>
 </body>
 
 </html>
